--- a/views/edit.pug
+++ b/views/edit.pug
@@ -1,21 +1,21 @@
-form(method='POST', action='/edit')
-    html 
-        head 
-            title Edit 
-        body 
-            h1 Update User Info
-        div     
-            label(for='name') Name
-            input(id='name', name='name')
-        div     
-            label(for='email') Email
-            input(id='email', name='email')
-        div 
-            label(for='username') Username
-            input(id='username', name='username')
-        div     
-            label(for='age') Age
-            input(id='age', name='age')
-
-        div 
-            input(type='submit' value='Update User')
+html 
+    head 
+        title Edit 
+    body 
+        h1 Update User Info
+        form(action="/update" method="POST") 
+            div     
+                label(for='name') Name
+                input(id='name', name='name', value=currentUser.name)
+            div     
+                label(for='email') Email
+                input(id='email', name='email', value=currentUser.email)
+            div 
+                label(for='username') Username
+                input(id='username', name='username', value=currentUser.username)
+            div     
+                label(for='age') Age
+                input(id='age', name='age', value=currentUser.age)
+            div 
+                input(type="hidden" name="uuid" value=currentUser.uuid)
+                button(type="submit") Update
